ghc-4335c07/testsuite/tests/typecheck/should_compile/tc009.hs
module ShouldSucceed where

o (True,x) = x
o (False,y) = y+1
