ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail005.hs
module ShouldFail where

(h:i) = (1,'a')
